--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - NODE_ENV=development
     volumes:
       - ./frontend:/usr/src/app
-    # command: ["npm", "run", "dev"]
+    # command: ["npm", "run", "dev"] t
 
   mongodb:
     image: mongo:6.0
